@@ -1,0 +1,74 @@
+﻿<?xml version="1.0" encoding="UTF-8"?>
+<prefab>
+  <property name="CopyAirBlocks" value="True" />
+  <property name="ExcludeDistantPOIMesh" value="False" />
+  <property name="ExcludePOICulling" value="False" />
+  <property name="DistantPOIYOffset" value="0" />
+  <property name="EditorGroups" value="rural" />
+  <property name="AllowTopSoilDecorations" value="False" />
+  <property name="DifficultyTier" value="0" />
+  <property name="ShowQuestClearCount" value="1" />
+  <property name="TraderArea" value="False" />
+  <property name="YOffset" value="-3" />
+  <property name="PrefabSize" value="25, 23, 25" />
+  <property name="RotationToFaceNorth" value="2" />
+  <property name="Tags" value="rural" />
+  <property name="Zoning" value="none" />
+  <property name="SleeperVolumeSize" value="21, 12, 21" />
+  <property name="SleeperVolumeStart" value="2, 1, 2" />
+  <property name="SleeperVolumeGroupId" value="0" />
+  <property name="SleeperVolumeGroup" value="GroupGenericZombie,1,2" />
+  <property name="SleeperIsLootVolume" value="False" />
+  <property name="SleeperIsQuestExclude" value="False" />
+  <property name="SleeperVolumeFlags" value="0" />
+  <property name="SleeperVolumeTriggeredBy" value=" " />
+  <property class="IndexedBlockOffsets">
+    <property class="quest_wood_trees">
+      <property name="0" value="22, 3, 19" />
+      <property name="1" value="18, 3, 23" />
+    </property>
+    <property class="quest_wood">
+      <property name="0" value="20, 3, 16" />
+      <property name="1" value="21, 3, 17" />
+      <property name="2" value="19, 3, 22" />
+    </property>
+    <property class="TraderOnOff">
+      <property name="0" value="11, 5, 14" />
+    </property>
+    <property class="quest_stone_boulder">
+      <property name="0" value="12, 3, 6" />
+    </property>
+  </property>
+  <property class="Stats">
+    <property name="TotalVertices" value="60356" />
+    <property name="TotalTriangles" value="74277" />
+    <property class="BlockEntities">
+      <property name="Vertices" value="56260" />
+      <property name="Triangles" value="69933" />
+    </property>
+    <property class="ChunkMeshes0">
+      <property name="Vertices" value="2312" />
+      <property name="Triangles" value="1224" />
+    </property>
+    <property class="ChunkMeshes1">
+      <property name="Vertices" value="0" />
+      <property name="Triangles" value="0" />
+    </property>
+    <property class="ChunkMeshes2">
+      <property name="Vertices" value="0" />
+      <property name="Triangles" value="0" />
+    </property>
+    <property class="ChunkMeshes3">
+      <property name="Vertices" value="0" />
+      <property name="Triangles" value="0" />
+    </property>
+    <property class="ChunkMeshes4">
+      <property name="Vertices" value="0" />
+      <property name="Triangles" value="0" />
+    </property>
+    <property class="ChunkMeshes5">
+      <property name="Vertices" value="1784" />
+      <property name="Triangles" value="3120" />
+    </property>
+  </property>
+</prefab>
