@@ -1,0 +1,67 @@
+﻿<?xml version="1.0" encoding="UTF-8"?>
+<prefab>
+  <property name="CopyAirBlocks" value="True" />
+  <property name="ExcludeDistantPOIMesh" value="False" />
+  <property name="ExcludePOICulling" value="False" />
+  <property name="DistantPOIYOffset" value="0" />
+  <property name="AllowTopSoilDecorations" value="False" />
+  <property name="DifficultyTier" value="0" />
+  <property name="ShowQuestClearCount" value="1" />
+  <property name="TraderArea" value="False" />
+  <property name="PrefabSize" value="25, 29, 25" />
+  <property name="RotationToFaceNorth" value="2" />
+  <property name="POIMarkerSize" value="15, 13, 3#1, 3, 3#1, 3, 3#3, 3, 1#3, 3, 1" />
+  <property name="POIMarkerStart" value="5, 9, -3#-1, 2, 14#25, 2, 13#11, 2, 25#18, 2, -1" />
+  <property name="POIMarkerGroup" value="driveway,cave,cave,cave,cave" />
+  <property name="POIMarkerTags" value="rural#cavenode#cavenode#cavenode#cavenode" />
+  <property name="POIMarkerType" value="PartSpawn,None,None,None,None" />
+  <property name="POIMarkerPartToSpawn" value="part_driveway_rural_16,,,," />
+  <property name="POIMarkerPartRotations" value="2,1,3,0,2" />
+  <property name="POIMarkerPartSpawnChance" value="1,1,1,1,1" />
+  <property name="Zoning" value="none" />
+  <property name="EditorGroups" value="rural" />
+  <property name="Tags" value="rural, cave, entrance" />
+  <property name="DuplicateRepeatDistance" value="2000" />
+  <property name="YOffset" value="-10" />
+  <property class="Stats">
+    <property name="TotalVertices" value="74141" />
+    <property name="TotalTriangles" value="40806" />
+    <property class="BlockEntities">
+      <property name="Vertices" value="58243" />
+      <property name="Triangles" value="27556" />
+    </property>
+    <property class="ChunkMeshes0">
+      <property name="Vertices" value="5450" />
+      <property name="Triangles" value="3650" />
+    </property>
+    <property class="ChunkMeshes1">
+      <property name="Vertices" value="6912" />
+      <property name="Triangles" value="3456" />
+    </property>
+    <property class="ChunkMeshes2">
+      <property name="Vertices" value="0" />
+      <property name="Triangles" value="0" />
+    </property>
+    <property class="ChunkMeshes3">
+      <property name="Vertices" value="0" />
+      <property name="Triangles" value="0" />
+    </property>
+    <property class="ChunkMeshes4">
+      <property name="Vertices" value="0" />
+      <property name="Triangles" value="0" />
+    </property>
+    <property class="ChunkMeshes5">
+      <property name="Vertices" value="3536" />
+      <property name="Triangles" value="6144" />
+    </property>
+  </property>
+  <property class="IndexedBlockOffsets">
+    <property class="quest_wood_trees">
+      <property name="0" value="22, 10, 23" />
+    </property>
+    <property class="challenge_cars">
+      <property name="0" value="20, 10, 13" />
+      <property name="1" value="20, 10, 16" />
+    </property>
+  </property>
+</prefab>
