@@ -1,0 +1,78 @@
+﻿<?xml version="1.0" encoding="UTF-8"?>
+<prefab>
+  <property name="CopyAirBlocks" value="True" />
+  <property name="ExcludeDistantPOIMesh" value="False" />
+  <property name="ExcludePOICulling" value="False" />
+  <property name="DistantPOIYOffset" value="0" />
+  <property name="AllowTopSoilDecorations" value="False" />
+  <property name="DifficultyTier" value="0" />
+  <property name="ShowQuestClearCount" value="1" />
+  <property name="TraderArea" value="False" />
+  <property name="PrefabSize" value="25, 31, 25" />
+  <property name="RotationToFaceNorth" value="2" />
+  <property name="POIMarkerSize" value="1, 3, 3#3, 3, 1#1, 3, 3#3, 3, 1" />
+  <property name="POIMarkerStart" value="25, 2, 19#10, 1, 25#-1, 1, 4#8, 1, -1" />
+  <property name="POIMarkerGroup" value="cave,cave,cave,cave" />
+  <property name="POIMarkerTags" value="cavenode#cavenode#cavenode#cavenode" />
+  <property name="POIMarkerType" value="None,None,None,None" />
+  <property name="POIMarkerPartToSpawn" value=",,," />
+  <property name="POIMarkerPartRotations" value="3,0,1,2" />
+  <property name="POIMarkerPartSpawnChance" value="1,1,1,1" />
+  <property name="Zoning" value="none" />
+  <property name="YOffset" value="-10" />
+  <property name="EditorGroups" value="Wilderness, cave" />
+  <property name="Tags" value="wilderness, cave, entrance" />
+  <property name="SleeperVolumeSize" value="21, 11, 21" />
+  <property name="SleeperVolumeStart" value="2, 1, 2" />
+  <property name="SleeperVolumeGroupId" value="0" />
+  <property name="SleeperVolumeGroup" value="GroupGenericZombie,1,2" />
+  <property name="SleeperIsLootVolume" value="False" />
+  <property name="SleeperIsQuestExclude" value="False" />
+  <property name="SleeperVolumeFlags" value="0" />
+  <property name="SleeperVolumeTriggeredBy" value=" " />
+  <property class="IndexedBlockOffsets">
+    <property class="quest_wood_trees">
+      <property name="0" value="18, 11, 18" />
+    </property>
+    <property class="quest_wood">
+      <property name="0" value="20, 10, 17" />
+      <property name="1" value="17, 10, 20" />
+      <property name="2" value="22, 10, 20" />
+    </property>
+    <property class="quest_stone_boulder">
+      <property name="0" value="8, 11, 16" />
+    </property>
+  </property>
+  <property class="Stats">
+    <property name="TotalVertices" value="71077" />
+    <property name="TotalTriangles" value="91902" />
+    <property class="BlockEntities">
+      <property name="Vertices" value="67467" />
+      <property name="Triangles" value="85570" />
+    </property>
+    <property class="ChunkMeshes0">
+      <property name="Vertices" value="0" />
+      <property name="Triangles" value="0" />
+    </property>
+    <property class="ChunkMeshes1">
+      <property name="Vertices" value="0" />
+      <property name="Triangles" value="0" />
+    </property>
+    <property class="ChunkMeshes2">
+      <property name="Vertices" value="0" />
+      <property name="Triangles" value="0" />
+    </property>
+    <property class="ChunkMeshes3">
+      <property name="Vertices" value="0" />
+      <property name="Triangles" value="0" />
+    </property>
+    <property class="ChunkMeshes4">
+      <property name="Vertices" value="0" />
+      <property name="Triangles" value="0" />
+    </property>
+    <property class="ChunkMeshes5">
+      <property name="Vertices" value="3610" />
+      <property name="Triangles" value="6332" />
+    </property>
+  </property>
+</prefab>
