@@ -42,6 +42,8 @@ V2.0.027 (ZZ027)
 * Added zztong_store_xs_19.
 * Added zztong_trailer_04.
 * Added Deco: cactus_06, cactus_07, cactus_08, rubble_32, remains_01, remains_02.
+* Added zztong_wilderness_filler_01, zztong_wilderness_filler_02.
+* Added zztong_rural_filler_05, zztong_rural_filler_06.
 
 V1.3.026 (ZZ026)
 * Added translations to Localization.txt.
